# sumologic-poweruser-mcp

./: .PATTERNS.md  .env.example  .gitignore  .markdownlint.json  CHANGELOG.md  CLAUDE.md  Dockerfile  FLEX_FIX_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART-CLAUDE-CODE.md  QUICKSTART.md  README.md  SEARCH_JOB_ANALYSIS.md  SECURITY.md  UV_MIGRATION.md  debug_legacy.py  debug_query.py  debug_result.py  docker-compose.yml  dockerignore  pyproject.toml  requirements.txt  test_auto_detection.py  test_content_library_tools.py  test_estimated_usage.py  test_field_management.py  test_flex_updates.py  test_log_volume_tools.py  test_query_examples.py  test_scan_cost_simple.py  test_search_audit_corrected.py  test_search_audit_simple.py  test_search_improvements.py  test_setup.py  verify_query_regex.py
.github/workflows/: ci.yml  security.yml
docs/: GITHUB_ACTIONS_SETUP.md  QUICK_REFERENCE.md  content-library-mcp-tools-proposal.md  example-prompts.md  mcp-tools-reference.md  mcp-tools-reference.md.bak
docs/ci-cd/: GITHUB_ACTIONS_SETUP.md
docs/development/: .CHECKLIST_TEMPLATE.md  ACTIONS_COMPLETED_2026-03-04.md  COMPLIANCE_ASSESSMENT.md  DASHBOARD_PAGINATION_UPDATE.md  DEVELOPMENT_STANDARDS_SUMMARY.md  FILTERING_UPDATES_SUMMARY.md  FLEX_FIX_SUMMARY.md  FLEX_TB_CREDITS_UPDATE.md  IMPLEMENTATION_SUMMARY.md  REMEDIATION_ACTION_PLAN.md  RESPONSE_FILTERING.md  SEARCH_JOB_ANALYSIS.md  SEARCH_JOB_TODO.md  TEST_COVERAGE_IMPROVEMENT_PLAN.md  TEST_RESULTS_2026-03-04.md  UV_MIGRATION.md
scripts/: download-query-examples.sh  run-docker-mcp.sh  run-with-env.sh  run_with_env.py  verify_docs.py
skills/: README.md  admin-alerting-and-monitoring.md  admin-field-extraction-rules.md  admin-partition-design.md  admin-rbac-security.md  alerting-monitors.md  alerting-time-compare-anomaly.md  audit-system-health.md  consulting-guide.md  content-library-navigation.md  cost-analyze-search-costs.md  dashboards-overview.md  dashboards-panel-types.md  data-collection-patterns.md  data-ingest-lag-diagnosis.md  discovery-logs-without-metadata.md  discovery-scheduled-views.md  search-copilot.md  search-indexes-partitions.md  search-log-search-basics.md  search-optimize-queries.md  search-optimize-with-views.md  search-result-size-optimization.md  search-scheduled-views.md  search-subquery.md  search-write-queries.md  ui-navigate-and-search.md
src/: __init__.py  sumologic_mcp_server.py
src/sumologic_mcp_server/: __init__.py  async_export_helper.py  audit_helpers.py  config.py  content_id_utils.py  exceptions.py  query_patterns.py  rate_limiter.py  response_filter.py  search_helpers.py  sumologic_mcp_server.py  url_builder.py  validation.py
src/sumologic_poweruser_mcp/: __init__.py  async_export_helper.py  exceptions.py  response_filter.py  search_helpers.py  sumologic_mcp_server.py  validation.py
tests/: __init__.py  conftest.py  test_analyze_ingest_lag.py  test_audit_tools.py  test_describe_log_pipeline.py  test_response_filter.py  test_sumologic_mcp_server.py  test_url_builder.py  test_usage_forecast.py  test_utility_tools.py
tests/debug/: debug_estimated_usage.py  debug_legacy.py  debug_metadata_response.py  debug_result.py
tests/integration/: test_account_management.py  test_all_tools.py  test_auto_detection.py  test_content_library_tools.py  test_data_volume.py  test_estimated_usage.py  test_explore_metadata.py  test_field_management.py  test_flex_scenario.py  test_flex_updates.py  test_log_volume_tools.py  test_query_examples.py  test_scan_cost_simple.py  test_search_audit.py  test_search_audit_corrected.py  test_search_audit_simple.py  test_search_audit_updates.py  test_search_improvements.py  test_search_scan_cost.py  test_setup.py
tests/utilities/: verify_case_fix.py  verify_query_regex.py  verify_usage_export.py
