[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sumologic-mcp-server"
version = "0.1.0"
description = "Sumo Logic MCP Server - provides read-only access to Sumo Logic APIs through the Model Context Protocol"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.10"
dependencies = [
    "httpx==0.27.2",
    "mcp[cli]==1.12.0",
    "pydantic==2.10.6",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-cov==6.0.0",
    "black==25.1.0",
    "ruff==0.9.3",
    "mypy==1.14.1",
    "bandit==1.8.0",
]

[project.scripts]
sumologic-mcp-server = "sumologic_mcp_server.sumologic_mcp_server:main"

[project.urls]
Homepage = "https://github.com/yourusername/sumologic-python-mcp"
Repository = "https://github.com/yourusername/sumologic-python-mcp.git"
Issues = "https://github.com/yourusername/sumologic-python-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/sumologic_mcp_server"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py38"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.uv]
dev-dependencies = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-cov==6.0.0",
    "black==25.1.0",
    "ruff==0.9.3",
    "mypy==1.14.1",
    "bandit==1.8.0",
]
